// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Button with external link 1`] = `
.emotion-0 {
  border: 0;
  padding: 0;
  background: none;
  cursor: pointer;
  font-size: inherit;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  color: inherit;
  -webkit-letter-spacing: 0.08em;
  -moz-letter-spacing: 0.08em;
  -ms-letter-spacing: 0.08em;
  letter-spacing: 0.08em;
  font-family: Asap,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 13px;
  line-height: 1.23;
  font-size: 13px;
  line-height: 1.23;
  font-weight: bold;
  display: inline-block;
  border-radius: 2px;
  line-height: 2.3;
  padding-left: 0.769em;
  padding-right: 0.769em;
  -webkit-transition: padding 0.2s ease-in-out,background 0.2s ease-in-out;
  transition: padding 0.2s ease-in-out,background 0.2s ease-in-out;
  color: #121212;
  background-color: #1ED7D1;
}

.emotion-0:hover {
  background-color: hsl(178.10000000000002,75.5%,43.2%);
}

.emotion-0:active {
  background-color: hsl(178.10000000000002,75.5%,38.4%);
}

.emotion-0:focus:not(:focus-visible) {
  outline: 0;
}

.emotion-0:focus-visible {
  box-shadow: 0 0 0 0.5px white,0 0 2px 2px #1ED7D1;
}

<Styled(button)
  as="a"
  data-action="foo"
  href="https://example.org"
  importance="primary"
>
  <a
    className="emotion-0"
    data-action="foo"
    href="https://example.org"
  >
    Hello, World!
  </a>
</Styled(button)>
`;

exports[`renders a Button with link 1`] = `
<Styled(button)
  as={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "children": "Hello, World!",
            "className": "css-1kthtkh",
            "data-action": "foo",
            "importance": "primary",
            "replace": false,
            "to": "/",
          },
          Object {
            "router": undefined,
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  data-action="foo"
  importance="primary"
  to="/"
/>
`;

exports[`renders a button using the text property 1`] = `
.emotion-0 {
  border: 0;
  padding: 0;
  background: none;
  cursor: pointer;
  font-size: inherit;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  color: inherit;
  -webkit-letter-spacing: 0.08em;
  -moz-letter-spacing: 0.08em;
  -ms-letter-spacing: 0.08em;
  letter-spacing: 0.08em;
  font-family: Asap,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 13px;
  line-height: 1.23;
  font-size: 13px;
  line-height: 1.23;
  font-weight: bold;
  display: inline-block;
  border-radius: 2px;
  line-height: 2.3;
  padding-left: 0.769em;
  padding-right: 0.769em;
  -webkit-transition: padding 0.2s ease-in-out,background 0.2s ease-in-out;
  transition: padding 0.2s ease-in-out,background 0.2s ease-in-out;
  color: #121212;
  background-color: #1ED7D1;
}

.emotion-0:hover {
  background-color: hsl(178.10000000000002,75.5%,43.2%);
}

.emotion-0:active {
  background-color: hsl(178.10000000000002,75.5%,38.4%);
}

.emotion-0:focus:not(:focus-visible) {
  outline: 0;
}

.emotion-0:focus-visible {
  box-shadow: 0 0 0 0.5px white,0 0 2px 2px #1ED7D1;
}

<Styled(button)
  as="button"
  data-action="foo"
  importance="primary"
  text="Hello, World!"
>
  <button
    className="emotion-0"
    data-action="foo"
  />
</Styled(button)>
`;

exports[`renders a disabled Button with external link 1`] = `
.emotion-0 {
  border: 0;
  padding: 0;
  background: none;
  cursor: pointer;
  font-size: inherit;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  color: inherit;
  -webkit-letter-spacing: 0.08em;
  -moz-letter-spacing: 0.08em;
  -ms-letter-spacing: 0.08em;
  letter-spacing: 0.08em;
  font-family: Asap,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 13px;
  line-height: 1.23;
  font-size: 13px;
  line-height: 1.23;
  font-weight: bold;
  display: inline-block;
  border-radius: 2px;
  line-height: 2.3;
  padding-left: 0.769em;
  padding-right: 0.769em;
  -webkit-transition: padding 0.2s ease-in-out,background 0.2s ease-in-out;
  transition: padding 0.2s ease-in-out,background 0.2s ease-in-out;
  color: #121212;
  background-color: #1ED7D1;
  cursor: default;
}

.emotion-0:hover {
  background-color: hsl(178.10000000000002,75.5%,43.2%);
}

.emotion-0:active {
  background-color: hsl(178.10000000000002,75.5%,38.4%);
}

.emotion-0:focus:not(:focus-visible) {
  outline: 0;
}

.emotion-0:focus-visible {
  box-shadow: 0 0 0 0.5px white,0 0 2px 2px #1ED7D1;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:focus,
.emotion-0:active {
  opacity: 0.4;
}

<Styled(button)
  as="a"
  data-action="foo"
  disabled={true}
  href="https://example.org"
  importance="primary"
>
  <a
    className="emotion-0"
    data-action="foo"
    disabled={true}
    href="https://example.org"
  >
    Hello, World!
  </a>
</Styled(button)>
`;

exports[`renders a link without href if \`to\` is given but \`disabled={true}\` 1`] = `
.emotion-0 {
  border: 0;
  padding: 0;
  background: none;
  cursor: pointer;
  font-size: inherit;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  color: inherit;
  -webkit-letter-spacing: 0.08em;
  -moz-letter-spacing: 0.08em;
  -ms-letter-spacing: 0.08em;
  letter-spacing: 0.08em;
  font-family: Asap,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 13px;
  line-height: 1.23;
  font-size: 13px;
  line-height: 1.23;
  font-weight: bold;
  display: inline-block;
  border-radius: 2px;
  line-height: 2.3;
  padding-left: 0.769em;
  padding-right: 0.769em;
  -webkit-transition: padding 0.2s ease-in-out,background 0.2s ease-in-out;
  transition: padding 0.2s ease-in-out,background 0.2s ease-in-out;
  color: #121212;
  background-color: #1ED7D1;
  cursor: default;
}

.emotion-0:hover {
  background-color: hsl(178.10000000000002,75.5%,43.2%);
}

.emotion-0:active {
  background-color: hsl(178.10000000000002,75.5%,38.4%);
}

.emotion-0:focus:not(:focus-visible) {
  outline: 0;
}

.emotion-0:focus-visible {
  box-shadow: 0 0 0 0.5px white,0 0 2px 2px #1ED7D1;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:focus,
.emotion-0:active {
  opacity: 0.4;
}

<Styled(button)
  as="a"
  data-action="foo"
  disabled={true}
  importance="primary"
  to="/"
>
  <a
    className="emotion-0"
    data-action="foo"
    disabled={true}
    to="/"
  >
    Hello, World!
  </a>
</Styled(button)>
`;

exports[`renders the expected markup 1`] = `
.emotion-0 {
  border: 0;
  padding: 0;
  background: none;
  cursor: pointer;
  font-size: inherit;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  color: inherit;
  -webkit-letter-spacing: 0.08em;
  -moz-letter-spacing: 0.08em;
  -ms-letter-spacing: 0.08em;
  letter-spacing: 0.08em;
  font-family: Asap,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 13px;
  line-height: 1.23;
  font-size: 13px;
  line-height: 1.23;
  font-weight: bold;
  display: inline-block;
  border-radius: 2px;
  line-height: 2.3;
  padding-left: 0.769em;
  padding-right: 0.769em;
  -webkit-transition: padding 0.2s ease-in-out,background 0.2s ease-in-out;
  transition: padding 0.2s ease-in-out,background 0.2s ease-in-out;
  color: #121212;
  background-color: #1ED7D1;
}

.emotion-0:hover {
  background-color: hsl(178.10000000000002,75.5%,43.2%);
}

.emotion-0:active {
  background-color: hsl(178.10000000000002,75.5%,38.4%);
}

.emotion-0:focus:not(:focus-visible) {
  outline: 0;
}

.emotion-0:focus-visible {
  box-shadow: 0 0 0 0.5px white,0 0 2px 2px #1ED7D1;
}

<Styled(button)
  as="button"
  data-action="foo"
  importance="primary"
>
  <button
    className="emotion-0"
    data-action="foo"
  >
    Hello, World!
  </button>
</Styled(button)>
`;
